# rapid-phonetic-matcher

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: Specification-Rapid-Phonetic-Matcher.md
examples/: alias_evaluation.rs  alphabet_check.rs  company_names.rs  evaluation.rs  quick_3m.rs  score_check.rs  surname_evaluation.rs  usage_guide.rs  weakness_analysis.rs
src/: cost_matrix.rs  distance.rs  kanji.rs  lib.rs  normalizer.rs  phoneme.rs
tests/: alias_matching.rs  company_names.rs  integration.rs  nistep_company_matching.rs
tests/fixtures/: nistep_companies.csv
